@@ -24,6 +24,7 @@
  */
 package com.ionutbalosin.jvm.performance.benchmarks.compiler;
 
+import java.util.Random;
 import java.util.concurrent.TimeUnit;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -31,37 +32,26 @@ import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Measurement;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
-import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Scope;
+import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
 /*
- * Test how Compiler can effectively merge several adjacent synchronized blocks that use the same lock object, thus reducing the locking overhead.
+ * Test how compiler can effectively coarsen/merge several adjacent synchronized blocks into one synchronized block,
+ * thus reducing the locking overhead. This optimization can be applied if the same lock object is used by all methods.
+ *
+ * Note: Compilers can help to coarsen/merge the locks, but that is not guaranteed!
+ *
+ * HotSpot specifics:
+ * - prior JDK 15: with biased locking enabled, acquire and release operations are basically no-ops and C2 compiler could,
+ * for example, perform better optimizations.
+ * - starting JDK 15: without biased locking (or some improved version of non-biased locking) certain synchronized scenarios
+ * might become much slower (i.e., since synchronized calls comes now with atomic CAS on lock).
+ *
+ * References:
+ * - https://openjdk.org/jeps/374
  */
-//
-//  Pattern:
-//
-//    method() {
-//        synchronized (this) {
-//            // statements 1
-//        }
-//        synchronized (this) {
-//            // statements 2
-//        }
-//        // ..
-//    }
-//
-//    is equivalent to:
-//
-//    method() {
-//        synchronized (this) {
-//            // statements 1
-//            // statements 2
-//            // ..
-//        }
-//    }
-//
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 @Warmup(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
@@ -70,73 +60,169 @@ import org.openjdk.jmh.annotations.Warmup;
 @State(Scope.Benchmark)
 public class LockCoarseningBenchmark {
 
-  @Param({"42"})
-  private int value;
+  private final int DEPTH = 8;
 
-  @Benchmark
-  public int lock_coarsening_10x() {
-    int sum = 0;
+  private int defaultValue;
+  private int incrementValue;
 
-    synchronized (this) {
-      sum += value;
-    }
+  // java -jar benchmarks/target/benchmarks.jar ".*LockCoarseningBenchmark.*"
+  // JVM Opts: -XX:+UseBiasedLocking (disabled starting JDK 15)
+  // JMH Opts: -t1,2
 
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    synchronized (this) {
-      sum += value;
-    }
-
-    return sum;
+  @Setup
+  public void setup() {
+    final Random random = new Random(16384);
+    defaultValue = random.nextInt(32, 64);
+    incrementValue = random.nextInt(32);
   }
 
   @Benchmark
-  public int lock_baseline() {
-    int sum = 0;
+  public int nested_synchronized() {
+    int result = defaultValue << 1;
 
     synchronized (this) {
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
-      sum += value;
+      result += incrementValue;
+      synchronized (this) {
+        result += incrementValue;
+        synchronized (this) {
+          result += incrementValue;
+          synchronized (this) {
+            result += incrementValue;
+            synchronized (this) {
+              result += incrementValue;
+              synchronized (this) {
+                result += incrementValue;
+                synchronized (this) {
+                  result += incrementValue;
+                  synchronized (this) {
+                    result += incrementValue;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
 
-    return sum;
+    return result;
+  }
+
+  @Benchmark
+  public int recursive_method_calls() {
+    int result = defaultValue << 1;
+    result = recursiveSum(result, DEPTH);
+    return result;
+  }
+
+  @Benchmark
+  public int chain_method_calls() {
+    int result = defaultValue << 1;
+
+    result = sum(result);
+    result = sum(result);
+    result = sum(result);
+    result = sum(result);
+    result = sum(result);
+    result = sum(result);
+    result = sum(result);
+    result = sum(result);
+
+    return result;
+  }
+
+  @Benchmark
+  public int conditional_chain_method_calls() {
+    int result = defaultValue << 1;
+
+    // all conditionals are evaluated to "true"
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+    if (result > 1 << 5) {
+      result = sum(result);
+    }
+
+    return result;
+  }
+
+  @Benchmark
+  public int conditional_nested_method_calls() {
+    int result = defaultValue << 1;
+
+    // all conditionals are evaluated to "true"
+    if (result > 1 << 5) {
+      result = sum(result);
+      if (result > 1 << 5) {
+        result = sum(result);
+        if (result > 1 << 5) {
+          result = sum(result);
+          if (result > 1 << 5) {
+            result = sum(result);
+            if (result > 1 << 5) {
+              result = sum(result);
+              if (result > 1 << 5) {
+                result = sum(result);
+                if (result > 1 << 5) {
+                  result = sum(result);
+                  if (result > 1 << 5) {
+                    result = sum(result);
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    return result;
+  }
+
+  @Benchmark
+  public int baseline() {
+    int result = defaultValue << 1;
+
+    synchronized (this) {
+      result += incrementValue;
+      result += incrementValue;
+      result += incrementValue;
+      result += incrementValue;
+      result += incrementValue;
+      result += incrementValue;
+      result += incrementValue;
+      result += incrementValue;
+    }
+
+    return result;
+  }
+
+  public synchronized int sum(int aValue) {
+    return aValue + incrementValue;
+  }
+
+  public synchronized int recursiveSum(int aValue, int depth) {
+    if (depth == 0) {
+      return aValue;
+    }
+    return incrementValue + recursiveSum(aValue, depth - 1);
   }
 }
